@@ -116,6 +116,7 @@ export(cluster.distribution, is.connected, decompose.graph,
 # centrality
 
 export(evcent, bonpow, alpha.centrality)
+export(igraph.arpack.default)
 
 # dynamics measurement
 
