@@ -65,3 +65,7 @@ NULL:
     HEADER:
 
 VECTORLIST:
+
+ARPACKOPT:
+    INCONV:
+      INOUT: %I%.tmp <- igraph.arpack.default; %I%.tmp[ names(%I%) ] <- %I% ; %I% <- %I%.tmp
